--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-aria/button": "^3.11.0",
+    "@react-aria/focus": "^3.19.0",
+    "@react-aria/interactions": "^3.22.5",
+    "@tanstack/react-virtual": "^3.10.9",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -22,11 +27,13 @@
     "next-themes": "^0.4.3",
     "npx": "^3.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-device-detect": "^2.2.3",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
