--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
