--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-aria/focus": "^3.19.0",
     "@react-aria/interactions": "^3.22.5",
     "@react-aria/link": "^3.7.7",
-    "@tanstack/react-virtual": "^3.10.9",
+    "@tanstack/react-virtual": "^3.11.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -24,20 +24,20 @@
     "framer-motion": "^12.0.0-alpha.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
+    "next": "15.1.5",
     "next-themes": "^0.4.3",
-    "npx": "^3.0.0",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "npx": "^10.2.2",
+    "react": "19.0.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icon-cloud": "^4.1.4",
+    "react-dom": "19.0.0",
+    "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.3.0",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.4",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.1"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/color": "^4.2.0",
