--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.0.0-alpha.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.460.0",
+    "motion": "^11.18.1",
     "next": "15.1.5",
     "next-themes": "^0.4.3",
     "npx": "^10.2.2",
