--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
@@ -16,11 +17,13 @@
     "@react-aria/focus": "^3.19.0",
     "@react-aria/interactions": "^3.22.5",
     "@react-aria/link": "^3.7.7",
+    "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-virtual": "^3.11.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "color": "^4.2.3",
+    "framer-motion": "^12.4.7",
     "geist": "^1.3.1",
     "lucide-react": "^0.460.0",
     "motion": "^11.18.1",
@@ -32,6 +35,7 @@
     "react-dom": "19.0.0",
     "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.3.0",
+    "react-syntax-highlighter": "^15.6.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -44,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
