--- a/package.json
+++ b/package.json
@@ -6,58 +6,58 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-aria/button": "^3.11.0",
-    "@react-aria/focus": "^3.19.0",
-    "@react-aria/interactions": "^3.22.5",
-    "@react-aria/link": "^3.7.7",
-    "@tabler/icons-react": "^3.30.0",
-    "@tanstack/react-virtual": "^3.11.2",
-    "autoprefixer": "^10.4.20",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-aria/button": "^3.14.2",
+    "@react-aria/focus": "^3.21.2",
+    "@react-aria/interactions": "^3.25.6",
+    "@react-aria/link": "^3.8.6",
+    "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-virtual": "^3.13.12",
+    "autoprefixer": "^10.4.22",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "color": "^4.2.3",
-    "framer-motion": "^12.4.7",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.460.0",
-    "motion": "^11.18.1",
-    "next": "15.3.3",
-    "next-themes": "^0.4.3",
-    "npx": "^10.2.2",
-    "react": "19.1.0",
+    "color": "^5.0.3",
+    "framer-motion": "^12.23.25",
+    "geist": "^1.5.1",
+    "lucide-react": "^0.556.0",
+    "motion": "^12.23.25",
+    "next": "16.0.7",
+    "next-themes": "^0.4.6",
+    "npx": "^3.0.0",
+    "react": "19.2.1",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.1",
     "react-icon-cloud": "^4.1.7",
-    "react-icons": "^5.3.0",
-    "react-syntax-highlighter": "^15.6.1",
-    "sonner": "^1.7.2",
-    "tailwind-merge": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-sync-external-store": "^1.5.0",
+    "use-sync-external-store": "^1.6.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.3"
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/color": "^4.2.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
